# grimmory-bridge

./: .gitignore  BUILD.md  README.md  README_EMBEDDED_METADATA.md  README_OPF_CONVERTER.md  build_release_package.ps1  build_windows_exe.ps1  grimmory_bridge.bat  index.html  opf_to_embedded_metadata.bat  opf_to_embedded_metadata.py  opf_to_grimmory_json.py  package.json  pnpm-lock.yaml  release.md  requirements.txt  setup_grimmory_bridge.bat  test_opf_to_embedded_metadata.py  test_opf_to_grimmory_json.py  tokens.css
.github/workflows/: build.yml  release.yml
python/: build.py  pyproject.toml
python/grimmory_bridge/: __init__.py  compat.py  core.py  epub.py  history.py  opf.py  pdf.py  plan.py  rpc.py  run.py  scan.py  settings.py  sidecar.py
python/tests/: test_history_rpc.py  test_phase1_refactor.py  test_plan_rpc.py  test_run_rpc.py  test_scan_rpc.py  test_settings_rpc.py
scripts/: build-sidecar.py  build-signed.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  SIGNING.md  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/compat/: CompatBadges.tsx
src/components/diff/: CoverDiff.tsx  FieldDiff.tsx  SidecarPreview.tsx
src/lib/: errors.ts  rpc.ts  store.ts  types.ts
