[package]
name = "grimmory-bridge"
version = "0.1.1"
description = "Desktop bridge for Grimmory metadata workflows"
authors = ["Grimmory Bridge Team"]
edition = "2021"

[lib]
name = "grimmory_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
